--- a/004.org
+++ b/004.org
@@ -46,7 +46,7 @@ Revealed slowly as they rounded a larger low tree, they could see a sort of hide
 
 It was made out of stone that had been squared off mostly <-xxx. Where it was irregular, it appeared more that this was due to erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
-The fine but irregular joints between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, geometric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way.
+The fine but irregular joints <-xxx better word xxx between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, geometric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way, and all with but fine lines to describe the places where the stones met, except where erosion had widened these.
 
 In this case though, where there were joints they were impossibly tight. There was the look of crazed lines scratched all over a smooth rock wall, for the exterior of the hide had proper "walls", at right angles to one another. It was made from irregular stone puzzle pieces that somehow fit one another perfectly.
 
