--- a/004.org
+++ b/004.org
@@ -68,7 +68,7 @@ Looking inward, one's eyes were met with a bunch <-xxx of fire-hardened spikes, 
 
 This was referred to in standard Crecspeak as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
-A typically Crec spike-guard had all sorts of clever latches and vine catches that would make getting /in/ much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there, from a poorly timed release of a branch bent out of the way.
+A typically Crec spike-guard had all sorts of clever latches and vine catches that would make getting /in/ much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there, say from the poorly timed release of a branch bent out of the way.
 
 The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their "pain points".
 
