--- a/004.org
+++ b/004.org
@@ -74,6 +74,13 @@ The baby gave them exasperated but patient looks as he stopped repeatedly to pre
 
 This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There was a lizard-bird, hunting at night, which was the usual, and along the nearby plains[fn:: Which was also usual for a lizard-bird, though they were so rare as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
+One might ask, "Hey, why not build the hide on the planes where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, and 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone.
+
+It was going to either be either: <-xxx
+
+- Sprint for xxx and hope
+- Go with the baby as they had apparently decided to do already.
+
 And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
 For them it would be a kind of entertainment.
