--- a/Appendix.org
+++ b/Appendix.org
@@ -79,6 +79,12 @@ Be careful not to over-think the meaning, but it should be apparent from context
 
 - morning-sun-left-back-side: North West (etc...)
 
+* Language and Naming Surrounding Women
+  Promised but not yet delivered.
+* Abundance of Human Predators and Other Dangers
+  Someone needs to explain why folks would not just simply off themselves if found in a world where fecking gigantic cats and goat-sized flying preditors are watching you /every now and then/. I mean, it'd be pretty terrifing, no? But the abundance of preditors and the seemingly impossily non-stop live-or-die struggles with this and other annoyances would be a real bummer (they were).
+
+  Explain yourself!
 * Numbers and Reckoning
 
 ** Whole Numbers
