--- a/Appendix.org
+++ b/Appendix.org
@@ -10,6 +10,10 @@ For the English speaking audience, we use the closest equivalent in English to d
 
 Be careful not to over-think the meaning, but it should be apparent from context. The words are chosen from English to best convey the meaning. It may sometimes be hard to understand why certain words were chosen. In these cases we are trying to convey the meaning as a Crec would understand it.
 
+** Idiomatic Crecspeak
+
+- Those things are being what they are: "It is what it is." Always in the plural for some reason.
+
 ** Glossary
 
 - after-die-monster: Their Devil. Just one, like you.
