--- a/004.org
+++ b/004.org
@@ -81,7 +81,7 @@ It was going to either be either: <-xxx
 - Sprint for xxx and hope
 - Go with the baby as they had apparently decided to do already.
 
-And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
+And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
 For them it would be a kind of entertainment.
 
