--- a/004.org
+++ b/004.org
@@ -1,4 +1,4 @@
-#+title: Bird
+#+title: Bird [WIP]
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
 #+OPTIONS: num:nil
 
@@ -232,7 +232,7 @@ This isn't over.
 
 The cat accelerated directly away from the hide, where his flickering light could be seen peeking through the trees as he climbed the plane, seamingly for the stars.
 
-The next morning had an unfortunate, "all too real" feeling of any night of "overdoing it", as if reality did in fact have an anchor and this is what finding a new anchorage <-xxx felt like this. It was just another chore.
+The next morning had the unfortunate, bleary, "all too real" feeling of a night having been overdone, as if reality did in fact have an anchor and this is what finding a new anchorage <-xxx felt like this. It was just another chore.
 
 The unmistakable scent of barbecued game wafted in the air outside. It had the /smell/ of an epic last-night.
 
@@ -242,21 +242,107 @@ Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin s
 
 "You've got 'gog' in your eye, scout.", said Grav helpfully. "Let's just fast-forward <-xxx and talk about it later. We need to xxx move fast xxx."
 
+It was just after dawn and because of, let's face it, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
+
+The way to deal with tooth-cats when not in a convenient stone hide is simple: Don't. And if that fails there a number of good tips and tricks that kept the smart apes on top.
+
+First, be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
+
+Two men (women were discouraged involvement, which wasn't necessary so long as it was just one cat vs the party, in which case, two men did the job, if barely.
+
+Two men with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two, cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
+
+Second, consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it; not an easy thing to get right. Lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it.
+
+Third, consider a nice, deep hole. It will need to be at least one and one half of one part the cat's arm-length, which was "xxx", and if the opening is subject to digging, forget it.
+
+Consider a /lot/ of fire. Tooth-cats are skittish of fire, but they are also not easily impressed.
+
+Incidentally, forget about: standing your ground, appearing large, being frighteningly loud.
+
+Spears were popular because the above, unless prepared, spears were pretty standard and reliable.
+
+Between the men they had about 8-9 cat-grade spears.
+
+And potentially can involve fire, as seen already.
+
+The men just planned to run. Shout and be conspicuous, but run. Shouting will not scare off a cat. But a cat hearing something "weird" approaching gradually will more likely than not gamble against hanging around. Of course if hey knew the sounds came from savory apes, they would calculate differently. But they wouldn't.
+
+They had to hurriedly pack, and say what counts as a "long goodbye" to someone they did indeed feel indebted to and fond of, with some crippling constraints. /'Hate to do this, gotta go...!'/
+
+Oh-Mas patted the two men gently on the knees and smiled a lot, there were clearly, on both sides, a lot of concepts that were frustratingly hard to convey. There was genuine regret at having to part.
+
+With Oh-Mas waving from inside the barricaded hide, they two men continued to send apologetic and grateful signs of "goodbye" while walking backwards. Rounding a blind corner, they both turned and transitioned to near sprint. This was wasteful of energy, but the waste was worth subtracting from time spent just here, in this active zone.
+
+The men both began to sing loudly while Oh-Mas could still hear them.
+
+> Insert Crecian anthem here. don't overdo it.
+
+The forest-child of course had no idea what they were singing about, but could /feel/ the tune more or less as intended and thought fondly of the two Giants.
+
+They finally broke out of Small Woods at a slowing sprint. They scared, and were scared by some gazelles and had to leap over a constrictor snake that would have easily eaten them had it been aware[fn:: In this case, knives. And hopefully another male traveling companion or at least a free arm.].
+
+Snare Plains lay before them, as the "zones" aren't well defined by either time or location, they continued to scan their assigned half and shout-sing whatever tune seemed appropriate in whatever way struck them as appropriate[fn:: Song selection was this important. "No singing" was a popular choice too for a number of reasons. The Crec and many other cavemen have invented all sorts of noise makers. The more Unnatural the sound the better.].
+
+The lizard-bird was spotted while both men were doing a scan of the sky ahead of them, on the verge of the woods. And they tentatively scanned /behind/ them as they emerged from the woods. Now spotted, their calculations could be made.
+
+It was circling a particular spot far to the west. Another bird of equal size[fn:: There was little difference in size among lizard-bird once they reached pointy-xxx adulthood, before which they would not bother seeking territory but more live as criminals in another's territory xxx], at 180-deg <-xxx on the other side of its orbit circled the same spot. It would half <-xxx do we just ... narrator needs to be consistent. numbers, Crecspeak, all that  xxx a palm at least before the lizard-bird got get anywhere near them. And it had a challenger. They were no more attractive than any number of things it would spot along the way. And they were plenty prepared, with plenty of time to get more prepared. <-xxx wat xxx
+
+The plains were almost boring in the lack of threats it presented this day. They kept a steady, efficient, springy run for palm upon palm.
+
+Approaching the next interesting bit of geology, they worked their way up the now rising trail that took them up the end of a canyon and onto xxx-Mesa, a mesa that as far as the Crec knew, continued to the end of the world. The Ender had called for one enormous stair step here for some reason.
+
+Fayt-Caves was began on the edge of this rise. As soon as the men met its elevation, Fayt-Caves just was all around[fn:: This overlooking a rather beautiful plain bordered by a lush woods in the distance, it was the "fancy" part, as things go. And the most convenient location, with the grandest view, the one you met first along the trail, was of course Verk's. It actually was 'Mama Bear's Burrow' officially, for it appears that way in all maps and documents. It was the residence of the Choh-Ov's current Mama Bear. Verk had started staging his belongings in the surrounding neighborhood the minute he was appointed.].
+
+As they were scanning Verk's residence for possible useful intel, a finly dressed caveman stepped out from a guard's hide along the mansion's defince wall.
+
+"Gentle cavemen! Gog and Grav, yes?"
+
+Neither had ever seen this man.
+
+"My friends, I am Lansh. I am a close associate of your Father-Brother Verk.", said Lansh, who was very short, very tan, very bald, very old and obsequious[fn:: A perfect word for this man's demeanor. The Crec have no single word with this meaning.].
+
+Lansh, gestured pleasantly, somehow tried to show regret at his causing so much flummoxing for the men.
+
+"Please accept my apologies and know that your time is valuable to me. And I'm very sorry for the unconventional approach I'm forced to make. You see, my need to find you cavemen is rather great <-xxx. I had a few of our caves' fine residents watch out for your approach. I was notified just now to start watching out for you. Just in time.
+
+Would you please allow me to invite you in for drink or food? We have all that you are fond of and more. There is no hurry."
+
+"Oh. Uh," Grav coming back to his SYSTEM2 xxx I want to say "system2" here. or drew. xxx. took the pause to interrupt. "Sir. It is a pleasure to meet you. Our time is yours and we thank you for the fine greeting and invitation. We must tell you that we are trying to make conch on the morning-sun-right-side of Boar Clubbing-Field. I expect we will only be just in time as things are. May we not see you later in the evening. We do not want to face punishment, nor disappoint The Forest."
+
+Lansh smiled, fingers teepeed purposefully in front of his chest. "My close Cavemen! No. Oh, you needn't do that. We have seen to it that you are excused, of course! Verk in his wisdom sees greater things in you both.
+
+"Now, which of you wonderful fit cavemen is Grav?" Lansh's eyes went searchingly between the two men which he looked prepared to do in silence until he got an answer.
+
+"I am Grav, Son of Zog.", volunteered Grav willingly.
+
+"Ah. Very well. Shall we retire to the parlor-burrow <-xxx? There is no longer a hurry, cavemen. For, if anything, we must relax and become friendly with one another. For us, the work to be done for The Forest on this training day is that of the /reflect-soul/. We must get to know one another, and such things cannot be rushed even in the slightest."
+
+A man appeared to Lansh's side, dressed in a chef's hide <-xxx I want to say caveman chef-wear but not be too stupid xxx.
+
+"Cavemen, Dois here will take all of your orders for whatever <-xxx grand sounding food/drink xxx and have them prepared just as you like. Please feel free to be as particular as you like.", said Lansh. "And your belongings will be taken care of for you of course. You are not being disarmed. Please keep whatever weapons you like. This is just to lighten your load."
+
+There was a scuffing of feet behind the men and they simultaneously felt their kit being lifted off their shoulders[fn:: xxx this would normally be kung-fu fighting time but because yadda yadda... xxx].
+
+Grav and Gog both took whatever would best pass for ceremonial <-xxx spear[fn:: describe an archetypal ceremonial spear.] and impulsively took some a small amount of food and xxx tucked it in their tuniccc? xxx. The great knives strapped xxx why did they not bushwhack with these knives xxx remained strapped to their waist and upper-thigh, in its sheath. If being disarmed, these would have been taken first, especially from behind.
+
+"Of course you are free to take with you whatever food you like. You will have that and more inside. As you wish.", said Lansh quietly[fn:: Lansh is the kind of person who can first grab your attention using a toolkit of artful, convincing facial gestures, and then speak very quietly so that, even though we've established that he is /definitely/ speaking to you and /definitely/ has something of exceptional importance to say, but is for what ever reason going to be speaking to you always in a voice below conversational volume. You lean in—mission accomplished.].
+
+The men were now convinced that club-drill was canceled for them and that Verk was at the core of this. They felt relief at getting out of it. But they both held great suspicion of this man, and Verk; and this sort of "campus of intrigue" about which there were endless stories, and where they were surely going to spend the night.
+
+
+
+xxx his name is Lansh
+xxx he _might_ be a eunuch. No one is judging.
+xxx he has gotten word of their blahblah find and has some intrigue to involve them with.
+
 xxx
 
 xxx
-xxx they fight off animals
-xxx one gets its claws in and tries to tear away the whole "tunnel" structure.
 xxx they remark repeatedly about the stink.
-xxx maybe the baby has a peace pipe?
-xxx   - "we should take it easy. remember last time."
-xxx   - baby smokes a shitload
-xxx   - maybe they smoke, the men get paralyzed with "visions", baby
-xxx     fights off everything by himself. (useless big people)
-xxx they "wake up" get ready to, have a tearful goodbye with their
-xxx new babyfriend.
 xxx
 xxx they cross the plains, maybe swat off a lizard-bird.
+xxx
 xxx They pass Verk's palace, remark or something.
 xxx
 xxx They get there. Find some musty, dusty armor to throw on, ill fitting.
@@ -271,4 +357,5 @@ xxx something cool instead.
 
 Off the trails and off the plains meant /in the woods/ adjacent to Snare Plains, a place where rich biome met rich biome and all kinds of killing went on. It was, in literal terms, "between the plains and the woods"[fn:: Which of course is the Crec expression that means 'between a rock and a hard place'. 'The plains' being haunted by something like a lizard-bird in the metaphor.] This was a phrase that was bandied about, but it was no joke to be in there any more than is, say to be caught in /the undertow/.
 
-And yet there they were. The forest-child was in-the-know about such things. There was no doubt. Lizard-bird aren't /everywhere/ in Crec. Given plenty of other factors, it took several hundred square miles to support just one. So they are rare, territorial, and deadly deadly. You might think in terms of the lizard-bird being to the Crec what great white shark is to modern humans, supposing of course that modern humans spend all their time swimming at the beach. These sky-trolling sharks were a lot less hypothetical, in other words; a lot more day-to-day. You were always right on the sky's shore, after all.
+And yet there they were. The forest-child was in-the-know about such things. There was no doubt. Lizard-bird aren't /everywhere/ in Crec. Given plenty of other factors, it took several hundred square miles to support just one. So they are rare, territorial, and deadly deadly. You might think in terms of the lizard-bird being to the Crec what great white shark is to modern humans, supposing of course that modern humans spend all their time swimming at the beach. These sky-trolling sharks were a lot less hypothetical; a lot more day-to-day. You were always right on the sky's shore, after all.
+
