--- a/Spoilers.org
+++ b/Spoilers.org
@@ -135,3 +135,6 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
   - Hummingbird Pass the road Thag was traveling along, kind of a Balrag border-road.
   - Prominence-Caves: Where Thag was walking TO (he lives/lived there?). [Is it on Water?? Do we have a sea down there??
 
+* Bigger Spoilers
+
+- It might turn out that Lansh is a double or even a /triple/ agent.
