--- a/Spoilers.org
+++ b/Spoilers.org
@@ -6,7 +6,7 @@ Hebbo!
 
 Here be spoilers.
 
-* Outline
+ Outline
 
 Everything is subject to change, eebureetang. But you'll have to retitle if we don't have a smackdown involving Gog's use of the word "boulder-stump" somehow.
 
@@ -39,6 +39,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Bugs
 
+- Verk's joke on Lu makes no sense with the level of sophistication they have. Even if you say "well, after the club wars they had a big Renaissance thing", the hide they share with Oh-Mas is clearly sophisticated, but also way before Crec times BUT the Momma Bear Palace (or whatever) is obviously wicked grand, and yet they did not know to /tie a rope to a boulder and yank it out of the way/?
 - It seems like Grav "retires to his burrow" a few too many times, probably creating an inconsistency.
 - Thag gives a big speech, but he has no lower lip!? Maybe he has a speaker. Maybe we lose track of who is the main attraction: the speaker or the deformed, dumb man? (oooh)
 - It seems like we claim G&G and all cavemen always run in the woods (first, maybe drop that?) but sometimes they are walking!!? Actual bushmen (whatever) do not do this unless they're running down a prey. Maybe instead, the men are in a hurry to get to the mine for some /reason/...? Then they may freely walk on occasion, released from the author's unreasonable expectations.
