--- a/_004.org
+++ b/_004.org
@@ -331,6 +331,7 @@ Grav and Gog both took whatever would best pass for ceremonial <-xxx spear[fn:: 
 The men were now convinced that club-drill was canceled for them and that Verk was at the core of this. They felt relief at getting out of it. But they both held great suspicion of this man, and Verk; and this sort of "campus of intrigue" about which there were endless stories, and where they were surely going to spend the night.
 
 
+xxx they get whores (and separate rooms): baby-maker-hire is not exactly normalized or legal, but no one at all would be surprised by it given the circumstances. One might be surprised if /not/.
 
 xxx his name is Lansh
 xxx he _might_ be a eunuch. No one is judging.
@@ -354,6 +355,8 @@ xxx Can you find me one?..." They are able to ditch club drill and do
 xxx something cool instead.
 
 --
+
+xxx hmmm... orphaned paragraphs. murder them? xxx
 
 Off the trails and off the plains meant /in the woods/ adjacent to Snare Plains, a place where rich biome met rich biome and all kinds of killing went on. It was, in literal terms, "between the plains and the woods"[fn:: Which of course is the Crec expression that means 'between a rock and a hard place'. 'The plains' being haunted by something like a lizard-bird in the metaphor.] This was a phrase that was bandied about, but it was no joke to be in there any more than is, say to be caught in /the undertow/.
 
